# chiwen

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.docs/: .chiwen.state.json  0_INDEX.md  1_ARCHITECTURE.md  2_CAPABILITIES.md  3_ROADMAP.md  4_DECISIONS.md  5_CHANGELOG.md
.docs/modules/chiwen_mcp/: README.md
.docs/modules/skill/: README.md
.docs/users/@唐磊/: cache.md
.trae/specs/prevent-doc-overwrites/: checklist.md  spec.md  tasks.md
src/chiwen_mcp/: __init__.py  changelog_utils.py  code_reader.py  collaboration.py  doc_code_lens.py  doc_generator.py  git_changelog.py  integrations.py  models.py  onboard.py  server.py  status.py  sync.py  template_engine.py
src/skill/: SKILL.md  project-knowledge.md
src/skill/kiro/: project-knowledge.md
tests/: test_changelog_utils.py  test_code_reader.py  test_collaboration_unittest.py  test_doc_code_lens.py  test_doc_generator.py  test_git_changelog.py  test_integrations.py  test_onboard.py  test_server.py  test_status.py  test_sync.py
