[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chiwen-knowledge-kit"
version = "0.1.0"
description = "AI-driven project knowledge documentation toolkit using Skill + MCP"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
chiwen-knowledge-kit = "chiwen_mcp.server:mcp.run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chiwen_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
